# fra

./: API_INTEGRATION_MATRIX.md  AUDIT_INDEX.md  AUDIT_REPORT.md  COMPREHENSIVE_AUDIT_REPORT_2026.md  EXECUTIVE_SUMMARY.md  FIXES_WITH_CODE_EXAMPLES.md  IMPLEMENTATION.md  PROJECT_VERIFICATION_REPORT.md  QUICK_FIX_CHECKLIST.md  QUICK_FIX_CHECKLIST_DETAILED.md  README.md  docker-compose.yml  find_claim_update.py  find_claims.py  find_dashboard_usage.py  find_get_claims.py  find_items_dot.py  find_items_dot_small.py  find_items_usage.py  find_paginated_response.py  find_paginated_ts.py  find_update_claim_usage.py  package-lock.json  package.json  plan.txt  print_paginated_types.py  print_paginated_types_small.py  schema_init.sql  seed_data.sql
backend/: .env.example  (+5 more)
vanaadhikar-drishti/backend/: AUTH_IMPLEMENTATION.md  Dockerfile  OAUTH_FULLY_WORKING.md  PRODUCTION_SERVICES.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
vanaadhikar-drishti/backend/alembic/: env.py
vanaadhikar-drishti/backend/alembic/versions/: 00a39d856a74_init.py  1b2f5a4f2dcb_add_core_domain_tables.py
vanaadhikar-drishti/backend/app/: main.py
vanaadhikar-drishti/backend/app/api/: client.py  dependencies.py  router.py
vanaadhikar-drishti/backend/app/core/: config.py
vanaadhikar-drishti/backend/docs/: schema.sql
vanaadhikar-drishti/backend/scripts/: check_oauth.py  start_oauth.py  verify_oauth.py
vanaadhikar-drishti/backend/tests/: test_auth_integration.py  test_services.py
vanaadhikar-drishti/backend/uploads/: input-a8c4a0567e8c4e889f0d2802632c26f6.txt
(+172 files in other folders)
